reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__unit_tuple_struct-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestUnitTupleStruct"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestUnitTupleStruct"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestUnitTupleStruct": {
        "type": "array",
        "prefixItems": [
          {
            "$ref": "#/components/schemas/std.tuple.Tuple0"
          }
        ]
      },
      "std.tuple.Tuple0": {
        "description": "Unit type",
        "type": "null"
      }
    }
  }
}
